fix overflow body

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,14 @@ html {
   color      : $color;
 }
 
+body {
+  &.menu-open {
+    width   : 100vw;
+    height  : 100vh;
+    overflow: hidden;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -100,6 +108,6 @@ h6 {
   }
 }
 
-em { 
+em {
   color: $primary;
 }
